added margins and paddings, added flex-box

--- a/style/style.css
+++ b/style/style.css
@@ -9,5 +9,144 @@ main {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main section {
+  border: solid 1px #d3d3d3bb;
+  width: 30%;
+  background-color: #404e7452;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#form-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.form-input {
+  margin: 1rem;
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.form-input label {
+  margin: 0.5rem 0;
+}
+
+.form-input input {
+  margin: 0 0.5rem 0 0;
+}
+
+.form-input .gender-select {
+  margin: 0.5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.form-input .gender-select div {
+  margin: 0 0.5rem 0 0;
+  padding: 0.6rem;
+}
+
+.form-input .gender-select input {
+  margin: 0.5rem  0.5rem 0.5rem 0;
+}
+
+.submit-btn {
+  margin: 1rem;
+  padding: 0.5rem;
+}
+
+.submit-btn .create-acc-btn {
+  min-width: 130px;
+  height: 40px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  border-radius: 20px;
+  border: 2px solid #358cd3;
+  background: #358cd3;
+}
+
+.submit-btn .create-acc-btn input {
+  background-color: transparent;
+  outline: none;
+  border: 0;
+  color: #d3d3d3;
+}
+
+.submit-btn .create-acc-btn:hover {
+  background: #fff;
+  color: red;
+}
+
+.submit-btn .create-acc-btn:hover input {
+  color: #272727;
 }
 /*# sourceMappingURL=style.css.map */
