--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,10 @@
 @import url(./reset.css);
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #272727;
+}
+
 main {
   width: 100vw;
   height: 100vh;
@@ -44,7 +49,9 @@ main section {
           align-items: center;
 }
 
-#form-group {
+.form-group {
+  width: 100%;
+  overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -61,6 +68,7 @@ main section {
 }
 
 .form-input {
+  width: 80%;
   margin: 1rem;
   padding: 0.5rem;
   display: -webkit-box;
@@ -86,7 +94,31 @@ main section {
   margin: 0 0.5rem 0 0;
 }
 
+.form-input input[type=text] {
+  width: 100%;
+  height: 2.5rem;
+  border-radius: 10px;
+  background-color: #e7e7e7;
+  outline: none;
+  border: 0;
+}
+
+.form-input input[type=date] {
+  width: 100%;
+  height: 2.5rem;
+  border-radius: 10px;
+  background-color: #e7e7e7;
+  outline: none;
+  border: 0;
+  color: #bebebe;
+}
+
+.form-input div input[type=checkbox] {
+  outline: none;
+}
+
 .form-input .gender-select {
+  width: 80%;
   margin: 0.5rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -101,11 +133,29 @@ main section {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 
 .form-input .gender-select div {
+  width: 40%;
   margin: 0 0.5rem 0 0;
-  padding: 0.6rem;
+  padding: 0.6rem 1rem;
+  background-color: #d3d3d3;
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .form-input .gender-select input {
@@ -143,10 +193,162 @@ main section {
 
 .submit-btn .create-acc-btn:hover {
   background: #fff;
-  color: red;
 }
 
 .submit-btn .create-acc-btn:hover input {
   color: #272727;
+}
+
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+  #form-wraper {
+    width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .form-group {
+    width: 80%;
+  }
+  input[type=text] {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 10px;
+    background-color: #e7e7e7;
+    outline: none;
+    border: 0;
+    color: #bebebe;
+  }
+  input[type=date] {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 10px;
+    background-color: #e7e7e7;
+    outline: none;
+    border: 0;
+    color: #bebebe;
+  }
+  .gender-select {
+    width: 80%;
+    margin: 0.5rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  #form-wraper {
+    width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .form-group {
+    width: 80%;
+  }
+  .form-input {
+    margin: 0;
+  }
+  input[type=text] {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 10px;
+    background-color: #e7e7e7;
+    outline: none;
+    border: 0;
+    color: #bebebe;
+  }
+  input[type=date] {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 10px;
+    background-color: #e7e7e7;
+    outline: none;
+    border: 0;
+    color: #bebebe;
+  }
+  .gender-select {
+    width: 80%;
+  }
+  .form-input .gender-select {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .form-input .gender-select div {
+    margin: 0.3rem 0 0.3rem 0;
+  }
 }
 /*# sourceMappingURL=style.css.map */
