added background animation, changed text color, changed radio selector background color

--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
 body {
   font-family: 'Roboto', sans-serif;
-  color: #272727;
+  color: #3b3b3b;
 }
 
 main {
@@ -14,6 +14,9 @@ main {
   background-position: center center;
   background-attachment: fixed;
   background-size: cover;
+  background-size: 200% 200%;
+  -webkit-animation: gradient 15s ease infinite;
+          animation: gradient 15s ease infinite;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -32,7 +35,7 @@ main {
 main section {
   border: solid 1px #d3d3d3bb;
   width: 30%;
-  background-color: #404e7452;
+  background-color: #ffffff46;
   border-radius: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -110,7 +113,7 @@ main section {
   background-color: #e7e7e7;
   outline: none;
   border: 0;
-  color: #bebebe;
+  color: #353535;
 }
 
 .form-input div input[type=checkbox] {
@@ -141,7 +144,7 @@ main section {
   width: 40%;
   margin: 0 0.5rem 0 0;
   padding: 0.6rem 1rem;
-  background-color: #d3d3d3;
+  background-color: #e7e7e7;
   border-radius: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -196,7 +199,7 @@ main section {
 }
 
 .submit-btn .create-acc-btn:hover input {
-  color: #272727;
+  color: #3b3b3b;
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
@@ -242,7 +245,7 @@ main section {
     background-color: #e7e7e7;
     outline: none;
     border: 0;
-    color: #bebebe;
+    color: #353535;
   }
   input[type=date] {
     width: 100%;
@@ -251,7 +254,7 @@ main section {
     background-color: #e7e7e7;
     outline: none;
     border: 0;
-    color: #bebebe;
+    color: #353535;
   }
   .gender-select {
     width: 80%;
@@ -318,7 +321,7 @@ main section {
     background-color: #e7e7e7;
     outline: none;
     border: 0;
-    color: #bebebe;
+    color: #353535;
   }
   input[type=date] {
     width: 100%;
@@ -327,7 +330,7 @@ main section {
     background-color: #e7e7e7;
     outline: none;
     border: 0;
-    color: #bebebe;
+    color: #353535;
   }
   .gender-select {
     width: 80%;
@@ -349,6 +352,30 @@ main section {
   }
   .form-input .gender-select div {
     margin: 0.3rem 0 0.3rem 0;
+  }
+}
+
+@-webkit-keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 /*# sourceMappingURL=style.css.map */
