--- a/style/style.scss
+++ b/style/style.scss
@@ -124,7 +124,7 @@ main {
         
       }
       .create-acc-btn:hover {
-        background: #fff;
+        background: transparent;
         input{
             color: $textColor
         }
