--- a/style/style.css
+++ b/style/style.css
@@ -101,7 +101,7 @@ main section {
   width: 100%;
   height: 2.5rem;
   border-radius: 10px;
-  background-color: #e7e7e7;
+  background-color: #97cdff69;
   outline: none;
   border: 0;
 }
@@ -110,7 +110,7 @@ main section {
   width: 100%;
   height: 2.5rem;
   border-radius: 10px;
-  background-color: #e7e7e7;
+  background-color: #97cdff69;
   outline: none;
   border: 0;
   color: #353535;
@@ -144,7 +144,7 @@ main section {
   width: 40%;
   margin: 0 0.5rem 0 0;
   padding: 0.6rem 1rem;
-  background-color: #e7e7e7;
+  background-color: #97cdff69;
   border-radius: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -242,7 +242,7 @@ main section {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
-    background-color: #e7e7e7;
+    background-color: #97cdff69;
     outline: none;
     border: 0;
     color: #353535;
@@ -251,7 +251,7 @@ main section {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
-    background-color: #e7e7e7;
+    background-color: #97cdff69;
     outline: none;
     border: 0;
     color: #353535;
@@ -318,7 +318,7 @@ main section {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
-    background-color: #e7e7e7;
+    background-color: #97cdff69;
     outline: none;
     border: 0;
     color: #353535;
@@ -327,7 +327,7 @@ main section {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
-    background-color: #e7e7e7;
+    background-color: #97cdff69;
     outline: none;
     border: 0;
     color: #353535;
