--- a/style/style.scss
+++ b/style/style.scss
@@ -11,7 +11,7 @@ $boxtransColor: #ffffff46;
 $textColor: #3b3b3b;
 $btntextColor: #d3d3d3;
 $borderColor: #d3d3d3bb;
-$formColor: #e7e7e7;
+$formColor: #97cdff69;
 $inputplaceholdercolor: #353535;
 body{
     font-family: 'Roboto', sans-serif;
