--- a/style/style.css
+++ b/style/style.css
@@ -97,16 +97,7 @@ main section {
   margin: 0 0.5rem 0 0;
 }
 
-.form-input input[type=text] {
-  width: 100%;
-  height: 2.5rem;
-  border-radius: 10px;
-  background-color: #97cdff69;
-  outline: none;
-  border: 0;
-}
-
-.form-input input[type=date] {
+.form-input input[type=text], .form-input input[type=date], .form-input input[type=email] {
   width: 100%;
   height: 2.5rem;
   border-radius: 10px;
@@ -238,16 +229,7 @@ main section {
   .form-group {
     width: 80%;
   }
-  input[type=text] {
-    width: 100%;
-    height: 2.5rem;
-    border-radius: 10px;
-    background-color: #97cdff69;
-    outline: none;
-    border: 0;
-    color: #353535;
-  }
-  input[type=date] {
+  input[type=text], input[type=date], input[type=email] {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
@@ -314,16 +296,7 @@ main section {
   .form-input {
     margin: 0;
   }
-  input[type=text] {
-    width: 100%;
-    height: 2.5rem;
-    border-radius: 10px;
-    background-color: #97cdff69;
-    outline: none;
-    border: 0;
-    color: #353535;
-  }
-  input[type=date] {
+  input[type=text], input[type=date], input[type=email] {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
