--- a/style/style.scss
+++ b/style/style.scss
@@ -55,16 +55,7 @@ main {
     input{
         margin:0 0.5rem 0 0;
     }
-    input[type=text] {
-        width:100%;
-        height: 2.5rem;
-        border-radius: 10px;
-        background-color: $formColor;
-        outline: none;
-        border: 0;
-        
-      }
-    input[type=date] {
+    input[type=text],input[type=date], input[type=email]{
         width:100%;
         height: 2.5rem;
         border-radius: 10px;
@@ -78,6 +69,7 @@ main {
             outline: none;
             
         }
+        
       }
     .gender-select{
         width: 80%;
@@ -153,16 +145,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
     {
     width:80%;
     }
-    input[type=text] {
-        width:100%;
-        height: 2.5rem;
-        border-radius: 10px;
-        background-color: $formColor;
-        outline: none;
-        border: 0;
-        color: $inputplaceholdercolor;
-      }
-      input[type=date] {
+    input[type=text],input[type=date],input[type=email] {
         width:100%;
         height: 2.5rem;
         border-radius: 10px;
@@ -204,16 +187,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
     .form-input{
         margin:0;
     }
-    input[type=text] {
-        width:100%;
-        height: 2.5rem;
-        border-radius: 10px;
-        background-color: $formColor;
-        outline: none;
-        border: 0;
-        color: $inputplaceholdercolor;
-      }
-      input[type=date] {
+    input[type=text], input[type=date], input[type=email]  {
         width:100%;
         height: 2.5rem;
         border-radius: 10px;
