--- a/style/style.css
+++ b/style/style.css
@@ -105,6 +105,7 @@ main section {
   width: 100%;
   margin: 0 0 5px;
   height: 2.5rem;
+  text-indent: 0.5rem;
   border-radius: 10px;
   background-color: #97cdff69;
   outline: none;
@@ -258,6 +259,7 @@ main section {
   input[type=text], input[type=date], input[type=email] {
     width: 100%;
     height: 2.5rem;
+    text-indent: 0.5rem;
     border-radius: 10px;
     background-color: #97cdff69;
     outline: none;
@@ -326,6 +328,7 @@ main section {
     width: 100%;
     height: 2.5rem;
     border-radius: 10px;
+    text-indent: 0.5rem;
     background-color: #97cdff69;
     outline: none;
     border: 0;
