--- a/style/style.scss
+++ b/style/style.scss
@@ -7,6 +7,7 @@
     align-items: $align;
 }
 $blueColor: #358cd3;
+$checkboxColor: #9e9e9e;
 $borderColortrans: #ffffff00;
 $boxtransColor: #ffffff46;
 $textColor: #3b3b3b;
@@ -63,6 +64,7 @@ main {
         width:100%;
         margin:0 0 5px;
         height: 2.5rem;
+        text-indent: 0.5rem;
         border-radius: 10px;
         background-color: $formColor;
         outline: none;
@@ -160,6 +162,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
     input[type=text],input[type=date],input[type=email] {
         width:100%;
         height: 2.5rem;
+        text-indent: 0.5rem;
         border-radius: 10px;
         background-color: $formColor;
         outline: none;
@@ -203,6 +206,7 @@ and (-webkit-min-device-pixel-ratio: 1) {
         width:100%;
         height: 2.5rem;
         border-radius: 10px;
+        text-indent: 0.5rem;
         background-color: $formColor;
         outline: none;
         border: 0;
