--- a/style/style.scss
+++ b/style/style.scss
@@ -15,6 +15,9 @@ $btntextColor: #d3d3d3;
 $borderColor: #d3d3d3bb;
 $formColor: #ffffff6e;
 $inputplaceholdercolor: #353535;
+html[theme="dark-mode"]{
+  filter: invert(1) hue-rotate(180deg);
+}
 body{
     font-family: 'Roboto', sans-serif;
     color:$textColor;
