--- a/style/style.css
+++ b/style/style.css
@@ -1,21 +1,11 @@
 @import url(./reset.css);
-@import url(./darkmode.css);
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap");
-html[theme="dark-mode"] {
-  -webkit-filter: invert(1) hue-rotate(180deg);
-          filter: invert(1) hue-rotate(180deg);
-}
-
 body {
   font-family: 'Roboto', sans-serif;
   color: #3b3b3b;
 }
 
-fieldset {
-  border: none;
-}
-
-main {
+body main {
   width: 100vw;
   height: 100vh;
   background-size: 100%;
@@ -42,9 +32,10 @@ main {
           align-items: center;
 }
 
-main section {
+body #form-wraper {
   border: solid 1px #d3d3d3bb;
-  width: 30%;
+  min-width: 35%;
+  max-width: 50%;
   background-color: #def6fc85;
   border-radius: 20px;
   display: -webkit-box;
@@ -60,6 +51,10 @@ main section {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+fieldset {
+  border: none;
 }
 
 .form-group {
@@ -226,9 +221,12 @@ main section {
   color: #3b3b3b;
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
+/* ----- iPad air ----- */
+/* Portrait and Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) {
   #form-wraper {
-    width: 90%;
+    min-width: 60%;
+    max-width: 70%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -291,9 +289,148 @@ main section {
   }
 }
 
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+/* Portrait */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) {
   #form-wraper {
-    width: 90%;
+    min-width: 60%;
+    max-width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .form-group {
+    width: 80%;
+  }
+  input[type=text], input[type=date], input[type=email] {
+    width: 100%;
+    height: 2.5rem;
+    text-indent: 0.5rem;
+    border-radius: 10px;
+    background-color: #ffffff6e;
+    outline: none;
+    border: 0;
+    color: #353535;
+  }
+  .gender-select {
+    width: 80%;
+    margin: 0.5rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+/* ----- iPad 3, 4 and Pro 9.7" ----- */
+/* Landscape */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) {
+  #form-wraper {
+    min-width: 60%;
+    max-width: 70%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .form-group {
+    width: 80%;
+  }
+  input[type=text], input[type=date], input[type=email] {
+    width: 100%;
+    height: 2.5rem;
+    text-indent: 0.5rem;
+    border-radius: 10px;
+    background-color: #ffffff6e;
+    outline: none;
+    border: 0;
+    color: #353535;
+  }
+  .gender-select {
+    width: 80%;
+    margin: 0.5rem 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
+
+/* -----End iPad 3, 4 and Pro 9.7" ----- */
+/* ----------- iPhone X ----------- */
+/* Portrait and Landscape */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+  #form-wraper {
+    min-width: 90%;
+    max-width: 95%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -351,6 +488,83 @@ main section {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .form-input .gender-select div {
+    margin: 0.3rem 0 0.3rem 0;
+  }
+}
+
+/* Portrait */
+/* Landscape */
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) and (orientation: landscape) {
+  #form-wraper {
+    min-width: 90%;
+    max-width: 95%;
+    min-height: 90%;
+    max-height: 95%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-group {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
+  .form-group {
+    width: 80%;
+  }
+  .form-input {
+    margin: 0;
+  }
+  input[type=text], input[type=date], input[type=email] {
+    width: 100%;
+    height: 2.5rem;
+    border-radius: 10px;
+    text-indent: 0.5rem;
+    background-color: #ffffff6e;
+    outline: none;
+    border: 0;
+    color: #353535;
+  }
+  .gender-select {
+    width: 80%;
+  }
+  .form-input .gender-select {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
